--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-    <section class="top-banner flexible-container">
+    <section class="flexible-container">
+        <div class="topnav">
+            <a class="#active" href="aboutus">About Us</a>
+            <a href="#gallery">Gallery</a>
+            <a href="#contact">Contact</a>
+            <a href="#home">Home</a>
+        </div>
+    </section>
+
+
+    <section class="flexible-container">
         <div class="half-width">
             <h1>Want to cook <span class="orange-color">Bangladeshi Food</span> ? Just stay tuned with <br> <span
                     class="orange-color">Maimuna Mithi</span> to watch my
@@ -47,7 +57,61 @@
         </div>
 
     </section>
-
+    <div>
+        <h1 class="food">Most Traditional Foods of Bangladesh</h1>
+        <p id="food-para" class="food">Bangladesh has got some very tasty traditional dishes. These are mouthwatreing &
+            yummy.<br>Below
+            you can see 3
+            of our most famous foods in Bangladesh you must try.</p>
+    </div>
+    <section class="food-area">
+        <div class="flexible-container">
+            <div class="food-item">
+                <img src="pictures/mezban3.jpg" alt="">
+                <h2>Mejban</h2>
+                <p>Mejban is a Persian word literally meaning a host, The word now means community feasting, a tradition
+                    that organized in Chattogram region. It is usually host by the rich people and the occasion could be
+                    like, birthday, death anniversary, observance day, inauguration of a new business etc.</p>
+            </div>
+            <div id="add-picture" class="food-item">
+                <img src="pictures/chicken-biryani.jpg" alt="">
+                <h2>Kacci Biriyani</h2>
+                <p>Kacchi means 'raw' - When the meat is added raw to the biryani pot, then it is referred to as Kacchi
+                    Biryani whereas Pakki is when the completely or partially cooked meat is added to the biryani pot
+                    and is sometimes layered.</p>
+            </div>
+            <div class="food-item">
+                <img src="pictures/Rupchanda-m-970x610.jpg" alt="">
+                <h2>Fried Fish</h2>
+                <p>A fish fry is a meal containing battered or breaded fried fish. It typically also includes french
+                    fries, coleslaw, hushpuppies, lemon slices, tartar sauce, hot sauce, malt vinegar and dessert. Some
+                    Native American versions are cooked by coating fish with semolina and egg yolk.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="subscriber">
+        <div class="subscribe-div">
+            <div class="sub-div">
+                <h2>630</h2>
+                <p>YouTube Subscribers</p>
+            </div>
+            <div class="sub-div">
+                <h2>1k</h2>
+                <p>Instagram followers</p>
+            </div>
+            <div class="sub-div">
+                <h2>203</h2>
+                <p>Facebook Followers</p>
+            </div>
+        </div>
+    </section>
+    <footer id="footer"> <br> <br>
+        <div class="textarea">
+            <h3> <span id="namecolor">Maimuna</span> Mithi </h3>
+            <p>Brining food justice to you everyone!</p> <br> <br>
+        </div>
+    </footer>
 </body>
 
 </html>
