--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 I can get my Goal </p>
             <br>
             <br>
-            <a class="facebook" href="https://www.facebook.com/maimuna789">Visit our Facebook page</a>
+            <a class="facebook" target="_blank" href="https://www.facebook.com/maimuna789">Visit our Facebook page</a>
         </div>
 
     </section>
@@ -68,21 +68,23 @@
         <div class="flexible-container">
             <div class="food-item">
                 <img src="pictures/mezban3.jpg" alt="">
-                <h2>Mejban</h2>
+                <h1>Mejban</h1>
                 <p>Mejban is a Persian word literally meaning a host, The word now means community feasting, a tradition
                     that organized in Chattogram region. It is usually host by the rich people and the occasion could be
                     like, birthday, death anniversary, observance day, inauguration of a new business etc.</p>
             </div>
             <div id="add-picture" class="food-item">
                 <img src="pictures/chicken-biryani.jpg" alt="">
-                <h2>Kacci Biriyani</h2>
-                <p>Kacchi means 'raw' - When the meat is added raw to the biryani pot, then it is referred to as Kacchi
-                    Biryani whereas Pakki is when the completely or partially cooked meat is added to the biryani pot
+                <h1>Kacci Biriyani</h1>
+                <p>Kacchi means 'raw' - When the meat is added raw to the biryani pot, then it is referred to as
+                    Kacchi
+                    Biryani whereas Pakki is when the completely or partially cooked meat is added to the biryani
+                    pot
                     and is sometimes layered.</p>
             </div>
             <div class="food-item">
                 <img src="pictures/Rupchanda-m-970x610.jpg" alt="">
-                <h2>Fried Fish</h2>
+                <h1>Fried Fish</h1>
                 <p>A fish fry is a meal containing battered or breaded fried fish. It typically also includes french
                     fries, coleslaw, hushpuppies, lemon slices, tartar sauce, hot sauce, malt vinegar and dessert. Some
                     Native American versions are cooked by coating fish with semolina and egg yolk.
